# fastapi_celery_poc

./: .dockerignore  Dockerfile  Makefile  README.md  clean_docker.sh  docker-compose.yml  pyproject.toml  starter.sh
config/: application_conf.ini  docker_application_conf.ini
src/: logger.py  settings.py
src/api/: main.py
src/api/celery_app/: celery_init.py  celeryconfig.py  tasks.py
src/api/rest/: error_handlers.py  route_builder.py
src/api/rest/api_v1/: schemas.py  task_routes.py
